# readme-ai

./: .gitignore  pyproject.toml
setup/: core_requirements.in  core_requirements.txt
