[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--tb=long",
    "--capture=sys",
    "--durations=5",
    "--cov=readmeai",
    "--cov-append",
    "--cov-branch",
    "--cov-fail-under=80",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=json:tests/.reports/coverage.json",
    "--asyncio-mode=auto",
    "--numprocesses=auto",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = ["readmeai"]
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == '__main__':",
    "pragma: no cover",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
    "**/__init__.py",
    "noxfile.py",
    "../readme-ai/readmeai/retrievers/git/metadata.py",
    "../readme-ai/readmeai/retrievers/git/providers.py",
    "../readme-ai/readmeai/utilities/fetch_badges.py",
    "../readme-ai/readmeai/extractors/tools.py",
]
precision = 2
show_missing = true
skip_empty = true
sort = "cover"

[tool.coverage.run]
data_file = "tests/.reports/.coverage"
parallel = true


test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-pretty",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-xdist",
]
docs = [
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material[imaging]",
    "mkdocs-minify-plugin",
    "mkdocstrings-python",
    "mkdocs-redirects",
    "pymdown-extensions",
]
anthropic = [
    "anthropic",
]
google-generativeai = [
    "google-generativeai",
]

[tool.pdm.build]
includes = [
    "readmeai",
    "readmeai.*",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Eli Salamie", email = "egsalamie@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.43.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "attrs==24.3.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "frozenlist==1.5.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-ai-generativelanguage==0.6.10",
    "google-api-core==2.24.0",
    "google-api-python-client==2.159.0",
    "google-auth-httplib2==0.2.0",
    "google-auth==2.37.0",
    "google-generativeai==0.8.3",
    "googleapis-common-protos==1.66.0",
    "grpcio-status==1.69.0",
    "grpcio==1.69.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "multidict==6.1.0",
    "openai==1.59.7",
    "propcache==0.2.1",
    "proto-plus==1.25.0",
    "protobuf==5.29.3",
    "pyasn1-modules==0.4.1",
    "pyasn1==0.6.1",
    "pydantic==2.10.5",
    "pydantic-extra-types==2.10.2",
    "pydantic-settings==2.7.1",
    "pyyaml==6.0.2",
    "structlog==25.1.0",
    "tenacity==9.0.0",
    "tiktoken==0.8.0",
    "tomli; python_version < \"3.11\"",
    "typing-extensions; python_version < \"3.11\"",
    "pydantic-core==2.27.2",
    "pyparsing==3.2.1",
    "python-dotenv==1.0.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rsa==4.9",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "yarl==1.18.3",
]
name = "readmeai"
version = "0.6.0-rc.3"
description = "Automated README file generator, powered by AI."
readme = "README.md"
keywords = [
    "ai-documentation",
    "ai-powered",
    "ai-readme",
    "automatic-documentation",
    "chat-gpt",
    "cli",
    "code-documentation",
    "developer-tools",
    "documentation-automation",
    "gemini",
    "github-documentation",
    "gpt-4",
    "llm",
    "markdown-generator",
    "openai",
    "project-documentation",
    "readme-ai",
    "readme-automation",
    "readme-generator",
    "software-documentation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
homepage = "https://github.com/eli64s/readme-ai"
documentation = "https://eli64s.github.io/readme-ai"

[project.optional-dependencies]
anthropic = [
    "anthropic",
]
google-generativeai = [
    "google-generativeai",
]

[project.scripts]
readmeai = "readmeai.cli.main:main"

[dependency-groups]
dev = [
    "mypy",
    "nox",
    "pre-commit",
    "ruff",
    "types-pyyaml",
    "types-toml",
]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-pretty",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-xdist",
]
docs = [
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material[imaging]",
    "mkdocs-minify-plugin",
    "mkdocstrings-python",
    "mkdocs-redirects",
    "pymdown-extensions",
]
anthropic = [
    "anthropic",
]
google-generativeai = [
    "google-generativeai",
]
